Refactor(creation): Add header style with new images

--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -1,6 +1,13 @@
+<head-creation
+	title="{{ 'CREATION.MENU.TITLE' | translate | uppercase }}"
+	section01="{{ 'CREATION.HEROS01' | translate }}"
+	section02="{{ 'CREATION.HEROS02' | translate }}"
+	section03="{{ 'CREATION.HEROS03' | translate }}"
+	imgLeft="assets/images/creation/perso_left.png"
+	imgRight="assets/images/creation/perso_right.png">
+</head-creation>
+
 <div class="creation-container">
-	<h1>{{ "CREATION.MENU.TITLE" | translate }}</h1>
-	<p innerHtml="{{ 'CREATION.HEROS' | translate }}"></p>
 	<!--------------------------------------------------------------------------------------------------------------->
 	<!------------                             PART I : RACE                                            ------------->
 	<!--------------------------------------------------------------------------------------------------------------->
