--- a/src/app/components/creation-slider/creation-slider.component.scss
+++ b/src/app/components/creation-slider/creation-slider.component.scss
@@ -46,4 +46,12 @@
 		width: 200px;
 		text-align: center;
 	}
+
+	.cs-option {
+		color: $light-color;
+	}
+
+	.cs-option-default {
+		color: $grey-color;
+	}
 }
