--- a/src/app/pages/roleplay/creation/creation.component.scss
+++ b/src/app/pages/roleplay/creation/creation.component.scss
@@ -2,16 +2,7 @@
 
 :host {
 
-	h2 {
-		margin: 10px 0;
-	}
-
-	p {
-		width: 90%;
-		text-align: justify;
-	}
-
-	.flex-container {
+	.creation-flex {
 		display: flex;
 		flex-direction: row;
 		width: 100%;
@@ -24,6 +15,7 @@
 		justify-content: space-around;
 		align-items: center;
 		width: 50%;
+		padding: 25px 0;
 		border-top: 6px solid $secondary-color;
 		background-position: center;
 		background-size: cover;
@@ -48,6 +40,15 @@
 		&.right {
 			border-left: 2px solid $secondary-color;
 		}
+
+		&.final {
+			background-image: linear-gradient(
+				0deg,
+				rgba($dark-color, 0.8),
+				rgba($dark-color, 0.8)
+			),
+			url("/assets/images/home_02.png");
+		}
 	}
 
 	.creation-race-img {
@@ -56,6 +57,31 @@
 		margin: 0 10px;
 		border-radius: 50%;
 		border: 2px solid $light-secondary-color;
+	}
+
+	.creation-points {
+		text-align: center;
+	}
+
+	.creation-skills {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width : 50%;
+	}
+
+	.creation-identity {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		&.left {
+			width : 65%;
+		}
+
+		&.right {
+			width : 35%;
+		}
 	}
 
 	.creation-avatar {
@@ -72,5 +98,14 @@
 			height: 250px;
 			width: 250px;
 		}
+	}
+
+	h2 {
+		margin: 10px 0;
+	}
+
+	p {
+		width: 90%;
+		text-align: justify;
 	}
 }
