--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -522,7 +522,7 @@
 	<div class="creation-container left">
 		<h2>{{ "CREATION.MENU.TITLE04" | translate }}</h2>
 		<p innerHtml="{{ 'CREATION.CRYSTALS.TEXT01' | translate }}"></p>
-		<table class="full-table">
+		<table class="creation-crystal-table full-table">
 			<thead>
 				<tr>
 					<th>{{ "CREATION.INDICS.RANK" | translate }}</th>
@@ -538,6 +538,38 @@
 					<td>{{ c.rank }}</td>
 					<td>{{ c.rarity }}</td>
 					<td>{{ c.power }}</td>
+					<td>{{ c.EV }}</td>
+					<td>{{ c.demiPV }}</td>
+					<td>{{ c.demiEV }}</td>
+				</tr>
+			</tbody>
+		</table>
+		<table class="creation-crystal-mobile-table full-table">
+			<thead>
+				<tr>
+					<th>{{ "CREATION.INDICS.RANK" | translate }}</th>
+					<th>{{ "CREATION.INDICS.RARITY" | translate }}</th>
+					<th>{{ "CREATION.INDICS.POWER" | translate }}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr *ngFor="let c of listCrystals">
+					<td>{{ c.rank }}</td>
+					<td>{{ c.rarity }}</td>
+					<td>{{ c.power }}</td>
+				</tr>
+			</tbody>
+		</table>
+		<table class="creation-crystal-mobile-table full-table">
+			<thead>
+				<tr>
+					<th>{{ "CREATION.INDICS.EV" | translate }}</th>
+					<th>{{ "CREATION.INDICS.DEMIPV" | translate }}</th>
+					<th>{{ "CREATION.INDICS.DEMIEV" | translate }}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr *ngFor="let c of listCrystals">
 					<td>{{ c.EV }}</td>
 					<td>{{ c.demiPV }}</td>
 					<td>{{ c.demiEV }}</td>
@@ -677,7 +709,7 @@
 	<div class="creation-container right">
 		<h2>{{ "CREATION.MENU.TITLE05" | translate }}</h2>
 		<p innerHtml="{{ 'CREATION.EQUIPEMENT.TEXT' | translate }}"></p>
-		<button (click)="openPopup()">?</button>
+		<button class="creation-help-equipment" (click)="openPopup()">?</button>
 		<div>
 			<span>{{ "CREATION.INDICS.ARMOR" | translate }} : </span>
 			<div class="dropdown">
