--- a/src/app/pages/roleplay/creation/creation.component.scss
+++ b/src/app/pages/roleplay/creation/creation.component.scss
@@ -6,6 +6,10 @@
 		display: flex;
 		flex-direction: row;
 		width: 100%;
+
+		@media screen and (max-width: 1200px) {
+			flex-direction: column;
+		}
 	}
 
 	.creation-container {
@@ -29,16 +33,28 @@
 			),
 			url("/assets/images/home_02.png");
 
+		@media screen and (max-width: 1200px) {
+			width: 100%;
+		}
+
 		&.big {
 			width: 100%;
 		}
 
 		&.left {
 			border-right: 2px solid $secondary-color;
+
+			@media screen and (max-width: 1200px) {
+				border: none;
+			}
 		}
 
 		&.right {
 			border-left: 2px solid $secondary-color;
+
+			@media screen and (max-width: 1200px) {
+				border: none;
+			}
 		}
 
 		&.final {
@@ -59,6 +75,20 @@
 		border: 2px solid $light-secondary-color;
 	}
 
+	.creation-crystal-table {
+		@media screen and (max-width: 700px) {
+			display: none;
+		}
+	}
+
+	.creation-crystal-mobile-table {
+		display: none;
+
+		@media screen and (max-width: 700px) {
+			display: block;
+		}
+	}
+
 	.creation-points {
 		text-align: center;
 	}
@@ -68,6 +98,16 @@
 		flex-direction: column;
 		align-items: center;
 		width : 50%;
+
+		@media screen and (max-width: 1200px) {
+			width : 100%;
+		}
+	}
+
+	.creation-help-equipment {
+		@media screen and (max-width: 700px) {
+			display : none;
+		}
 	}
 
 	.creation-identity {
@@ -77,10 +117,18 @@
 
 		&.left {
 			width : 65%;
+
+			@media screen and (max-width: 1200px) {
+				width : 100%;
+			}
 		}
 
 		&.right {
 			width : 35%;
+
+			@media screen and (max-width: 1200px) {
+				width : 100%;
+			}
 		}
 	}
 
@@ -102,6 +150,10 @@
 
 	h2 {
 		margin: 10px 0;
+
+		@media screen and (max-width: 1200px) {
+			text-align: center;
+		}
 	}
 
 	p {
