--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,8 +23,8 @@ h1 {
 	margin: 0;
 
 	@media screen and (max-width: 700px) {
-		font-size: 35px;
-		line-height: 35px;
+		font-size: 30px;
+		line-height: 30px;
 	}
 }
 
@@ -168,6 +168,10 @@ textarea {
 	color: $light-color;
 	background: $dark-color;
 	border-color: $secondary-color;
+
+	@media screen and (max-width: 700px) {
+		width : 85%;
+	}
 }
 
 .help {
