--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -53,7 +53,7 @@
 			alt=""
 		/>
 		<div class="dropdown">
-			<select class="dropdown-select" (change)="changeRace($event.target)">
+			<select class="dropdown-select" value="{{ race }}" (change)="changeRace($event.target)">
 				<option value="1">{{
 					"UNIVERSE.POPULATION.PEOPLE1.NAME" | translate
 				}}</option>
@@ -210,6 +210,7 @@
 						help="{{ 'CREATION.ANIMAUX.HELP' | translate }}"
 						type="animaux"
 						value="{{ mainSkills.animaux.value }}"
+						spe="{{ mainSkills.animaux.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -223,6 +224,7 @@
 						help="{{ 'CREATION.ART.HELP' | translate }}"
 						type="art"
 						value="{{ mainSkills.art.value }}"
+						spe="{{ mainSkills.art.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -236,6 +238,7 @@
 						help="{{ 'CREATION.ARTISANAT.HELP' | translate }}"
 						type="artisanat"
 						value="{{ mainSkills.artisanat.value }}"
+						spe="{{ mainSkills.artisanat.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -251,6 +254,7 @@
 						help="{{ 'CREATION.ATHLETISME.HELP' | translate }}"
 						type="athletisme"
 						value="{{ mainSkills.athletisme.value }}"
+						spe="{{ mainSkills.athletisme.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -264,6 +268,7 @@
 						help="{{ 'CREATION.COMBAT.HELP' | translate }}"
 						type="combat"
 						value="{{ mainSkills.combat.value }}"
+						spe="{{ mainSkills.combat.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -277,6 +282,7 @@
 						help="{{ 'CREATION.ETIQUETTE.HELP' | translate }}"
 						type="etiquette"
 						value="{{ mainSkills.etiquette.value }}"
+						spe="{{ mainSkills.etiquette.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -290,6 +296,7 @@
 						help="{{ 'CREATION.FURTIVITE.HELP' | translate }}"
 						type="furtivite"
 						value="{{ mainSkills.furtivite.value }}"
+						spe="{{ mainSkills.furtivite.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -305,6 +312,7 @@
 						help="{{ 'CREATION.INFORMATION.HELP' | translate }}"
 						type="information"
 						value="{{ mainSkills.information.value }}"
+						spe="{{ mainSkills.information.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -318,6 +326,7 @@
 						help="{{ 'CREATION.INTUITION.HELP' | translate }}"
 						type="intuition"
 						value="{{ mainSkills.intuition.value }}"
+						spe="{{ mainSkills.intuition.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -333,6 +342,7 @@
 						help="{{ 'CREATION.INVESTIGATION.HELP' | translate }}"
 						type="investigation"
 						value="{{ mainSkills.investigation.value }}"
+						spe="{{ mainSkills.investigation.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -346,6 +356,7 @@
 						help="{{ 'CREATION.LARCIN.HELP' | translate }}"
 						type="larcin"
 						value="{{ mainSkills.larcin.value }}"
+						spe="{{ mainSkills.larcin.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -361,6 +372,7 @@
 						help="{{ 'CREATION.MANIPULATION.HELP' | translate }}"
 						type="manipulation"
 						value="{{ mainSkills.manipulation.value }}"
+						spe="{{ mainSkills.manipulation.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -380,6 +392,7 @@
 						help="{{ 'CREATION.MEDECINE.HELP' | translate }}"
 						type="medecine"
 						value="{{ mainSkills.medecine.value }}"
+						spe="{{ mainSkills.medecine.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -395,6 +408,7 @@
 						help="{{ 'CREATION.PERSUASION.HELP' | translate }}"
 						type="persuasion"
 						value="{{ mainSkills.persuasion.value }}"
+						spe="{{ mainSkills.persuasion.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -408,6 +422,7 @@
 						help="{{ 'CREATION.PILOTAGE.HELP' | translate }}"
 						type="pilotage"
 						value="{{ mainSkills.pilotage.value }}"
+						spe="{{ mainSkills.pilotage.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -421,6 +436,7 @@
 						help="{{ 'CREATION.SAVOIR.HELP' | translate }}"
 						type="savoir"
 						value="{{ mainSkills.savoir.value }}"
+						spe="{{ mainSkills.savoir.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -434,6 +450,7 @@
 						help="{{ 'CREATION.SURVIE.HELP' | translate }}"
 						type="survie"
 						value="{{ mainSkills.survie.value }}"
+						spe="{{ mainSkills.survie.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -446,6 +463,7 @@
 						help="{{ 'CREATION.ELEMENTAIRES.HELP' | translate }}"
 						type="elementaires"
 						value="{{ crystalSkills.elementaires.value }}"
+						spe="{{ crystalSkills.elementaires.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeCrystalSkills($event)"
 						(onSpeChange)="changeSpeCrystalSkills($event)"
@@ -458,6 +476,7 @@
 						help="{{ 'CREATION.INVOCATIONS.HELP' | translate }}"
 						type="invocations"
 						value="{{ crystalSkills.invocations.value }}"
+						spe="{{ crystalSkills.invocations.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeCrystalSkills($event)"
 						(onSpeChange)="changeSpeCrystalSkills($event)"
@@ -470,6 +489,7 @@
 						help="{{ 'CREATION.MENTAUX.HELP' | translate }}"
 						type="mentaux"
 						value="{{ crystalSkills.mentaux.value }}"
+						spe="{{ crystalSkills.mentaux.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeCrystalSkills($event)"
 						(onSpeChange)="changeSpeCrystalSkills($event)"
@@ -482,6 +502,7 @@
 						help="{{ 'CREATION.TRANSFORMATIONS.HELP' | translate }}"
 						type="transformations"
 						value="{{ crystalSkills.transformations.value }}"
+						spe="{{ crystalSkills.transformations.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeCrystalSkills($event)"
 						(onSpeChange)="changeSpeCrystalSkills($event)"
@@ -494,6 +515,7 @@
 						help="{{ 'CREATION.SPATIAUXTEMPORELS.HELP' | translate }}"
 						type="spatiauxtemporels"
 						value="{{ crystalSkills.spatiauxtemporels.value }}"
+						spe="{{ crystalSkills.spatiauxtemporels.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeCrystalSkills($event)"
 						(onSpeChange)="changeSpeCrystalSkills($event)"
@@ -506,6 +528,7 @@
 						help="{{ 'CREATION.SPECIAUX.HELP' | translate }}"
 						type="speciaux"
 						value="{{ crystalSkills.speciaux.value }}"
+						spe="{{ crystalSkills.speciaux.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeCrystalSkills($event)"
 						(onSpeChange)="changeSpeCrystalSkills($event)"
@@ -594,12 +617,13 @@
 			<tbody>
 				<tr>
 					<td>
-						<input type="text" (change)="changeCrystalName(1, $event.target)" />
+						<input type="text" value="{{ crystal01.name }}" (change)="changeCrystalName(1, $event.target)" />
 					</td>
 					<td>
 						<div class="dropdown">
 							<select
 								class="dropdown-select"
+								value="{{ crystal01.type }}"
 								(change)="changeCrystalType(1, $event.target)"
 							>
 								<option value=""></option>
@@ -616,6 +640,7 @@
 						<div class="dropdown">
 							<select
 								class="dropdown-select"
+								value="{{ crystal01.rank }}"
 								(change)="changeCrystalRank(1, $event.target)"
 							>
 								<option value=""></option>
@@ -630,12 +655,13 @@
 				</tr>
 				<tr>
 					<td>
-						<input type="text" (change)="changeCrystalName(2, $event.target)" />
+						<input value="{{ crystal02.name }}" type="text" (change)="changeCrystalName(2, $event.target)" />
 					</td>
 					<td>
 						<div class="dropdown">
 							<select
 								class="dropdown-select"
+								value="{{ crystal02.type }}"
 								(change)="changeCrystalType(2, $event.target)"
 							>
 								<option value=""></option>
@@ -652,6 +678,7 @@
 						<div class="dropdown">
 							<select
 								class="dropdown-select"
+								value="{{ crystal02.rank }}"
 								(change)="changeCrystalRank(2, $event.target)"
 							>
 								<option value=""></option>
@@ -666,12 +693,13 @@
 				</tr>
 				<tr>
 					<td>
-						<input type="text" (change)="changeCrystalName(3, $event.target)" />
+						<input value="{{ crystal03.name }}" type="text" (change)="changeCrystalName(3, $event.target)" />
 					</td>
 					<td>
 						<div class="dropdown">
 							<select
 								class="dropdown-select"
+								value="{{ crystal03.type }}"
 								(change)="changeCrystalType(3, $event.target)"
 							>
 								<option value=""></option>
@@ -688,6 +716,7 @@
 						<div class="dropdown">
 							<select
 								class="dropdown-select"
+								value="{{ crystal03.rank }}"
 								(change)="changeCrystalRank(3, $event.target)"
 							>
 								<option value=""></option>
@@ -713,7 +742,7 @@
 		<div>
 			<span>{{ "CREATION.INDICS.ARMOR" | translate }} : </span>
 			<div class="dropdown">
-				<select class="dropdown-select" (change)="changeArmor($event.target)">
+				<select class="dropdown-select" value="{{ armor.id }}" (change)="changeArmor($event.target)">
 					<option *ngFor="let a of listArmors" value="{{ a.id }}">{{
 						a.name
 					}}</option>
@@ -734,6 +763,7 @@
 			<div class="dropdown">
 				<select
 					class="dropdown-select"
+					value="{{ weapon01.id }}"
 					(change)="changeWeapon01($event.target)"
 				>
 					<option value="0"></option>
@@ -767,6 +797,7 @@
 			<div class="dropdown">
 				<select
 					class="dropdown-select"
+					value="{{ weapon02.id }}"
 					(change)="changeWeapon02($event.target)"
 				>
 					<option value="0"></option>
@@ -806,9 +837,10 @@
 		<div class="creation-identity left">
 			<p innerHtml="{{ 'CREATION.IDENTITY.TEXT' | translate }}"></p>
 			<span>Nom du personnage</span>
-			<input type="text" (change)="changeName($event.target)" />
+			<input type="text" value="{{ name }}" (change)="changeName($event.target)" />
 			<span>Description rapide du personnage (max : 130 caract.)</span>
 			<textarea
+				value="{{ description }}"
 				maxlength="130"
 				(change)="changeDescription($event.target)"
 			></textarea>
@@ -838,4 +870,12 @@
 	<h2>{{ "CREATION.MENU.CONCLUSION" | translate }}</h2>
 	<p class="creation-points warning" innerHtml="{{ listWarnings }}"></p>
 	<button (click)="downloadPDF()">Télécharger la fiche de personnage</button>
+	<label for="creation-load-parameters">Importer les paramètres du personnage</label>
+	<input
+		type="file"
+		id="creation-load-parameters"
+		accept=".json, application/json"
+		(change)="loadJSON($event.target)"
+	/>
+	<a id ="creation-save-parameters" (click)="downloadJSON()">Sauvegarder les paramètres du personnage</a>
 </div>
