--- a/src/app/components/head-creation/head-creation.component.scss
+++ b/src/app/components/head-creation/head-creation.component.scss
@@ -70,7 +70,7 @@
 					rgba($dark-color, 0.8),
 					rgba($dark-color, 0.8)
 				),
-				url("/assets/images/home_01.png");
+				url("/assets/images/home_02.png");
 		}
 
 		.head-title {
@@ -82,7 +82,7 @@
 			}
 
 			h1 {
-				width: 50%;
+				width: auto;
 				text-align: center;
 			}
 		}
