Style(creation): Forgot border

--- a/src/app/pages/roleplay/creation/creation.component.scss
+++ b/src/app/pages/roleplay/creation/creation.component.scss
@@ -45,7 +45,7 @@
 			border-right: 2px solid $secondary-color;
 
 			@media screen and (max-width: 1200px) {
-				border-left: none;
+				border-right: none;
 				border-top: 6px solid $secondary-color;
 			}
 		}
