Feat(creation): Add perso pretires

--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -15,8 +15,10 @@
 <!--------------------------------------------------------------------------------------------------------------->
 <div class="creation-container big import">
 	<h2>{{ "CREATION.MENU.IMPORT" | translate }}</h2>
+	<p innerHtml="{{ 'CREATION.PRETIRES' | translate }}"></p>
+	<a href="./assets/files/Persos_Pretires.zip" download>{{ "ROLEPLAY.FILES.PERSOSPRETIRES" | translate }}</a>
 	<p innerHtml="{{ 'CREATION.IMPORT' | translate }}"></p>
-	<label for="creation-load-parameters">Importer les paramètres du personnage</label>
+	<label for="creation-load-parameters">{{ "ROLEPLAY.FILES.PERSOSPARAMETERS" | translate }}</label>
 	<input
 		type="file"
 		id="creation-load-parameters"
