--- a/src/app/pages/universe/celestia/celestia.component.scss
+++ b/src/app/pages/universe/celestia/celestia.component.scss
@@ -1,13 +1,13 @@
 @import "../../../../styles/variables.scss";
 
 :host {
-	.crystal-container {
+	.celestia-map-container {
 		position: relative;
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: center;
-		height: 550px;
+		height: 450px;
 
 		@media screen and (max-width: 1000px) {
 			flex-direction: column;
@@ -37,7 +37,7 @@
 				url("/assets/images/home_04.png");
 		}
 
-		.crystal-imgs {
+		.celestia-imgs {
 			position: relative;
 			margin: 0 auto;
 			height: 450px;
@@ -59,9 +59,81 @@
 			}
 		}
 
-		.crystal-text {
+		.celestia-text {
 			text-align: left;
 			width: 50%;
+			padding-right: 10%;
+
+			@media screen and (max-width: 1000px) {
+				padding: 0;
+				margin-bottom: 20px;
+				width: 80%;
+			}
+
+			p {
+				margin: 0;
+				padding: 4px 0;
+
+				@media screen and (max-width: 1000px) {
+					padding: 0;
+				}
+			}
+		}
+	}
+
+	////////////////////////////////////////////////////////////////////////////////////////////
+
+	.celestia-history-container {
+		position: relative;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		height: 950px;
+		padding: 0 10%;
+
+		@media screen and (max-width: 1000px) {
+			flex-direction: column;
+			justify-content: normal;
+			height: auto;
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			opacity: 1;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			z-index: -1;
+
+			background-position: center;
+			background-size: cover;
+			background-image: linear-gradient(
+					0deg,
+					rgba($dark-color, 0.8),
+					rgba($dark-color, 0.8)
+				),
+				url("/assets/images/home_04.png");
+		}
+
+		.celestia-history {
+			display: flex;
+			flex-direction: column;
+			margin-right: 30px;
+
+			@media screen and (max-width: 1000px) {
+				margin: 0;
+			}
+
+			.celestia-history-title {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+				padding-top: 30px;
+				padding-bottom: 4px;
+			}
 
 			@media screen and (max-width: 1000px) {
 				margin-bottom: 20px;
@@ -69,14 +141,37 @@
 			}
 
 			p {
-				font-size: 14px;
-				color: $secondary-color;
 				margin: 0;
-				padding: 4px 30px 4px 0;
-				font-style: italic;
+			}
+		}
 
-				@media screen and (max-width: 1000px) {
+		.celestia-history-table {
+			height: 80%;
+			border-collapse: collapse;
+
+			@media screen and (max-width: 1000px) {
+				height: 500px;
+			}
+
+			tbody {
+
+				td {
 					padding: 0;
+					text-align: center;
+					border-radius: 0;
+				}
+
+				td:nth-child(2), td:nth-child(3) {
+					padding: 10px;
+				}
+
+				.dotted td:nth-child(2)  {
+					height: 40px;
+					border-right: 4px dotted $light-color;
+				}
+
+				td:nth-child(2)  {
+					border-right: 4px solid $light-color;
 				}
 			}
 		}
