--- a/src/app/pages/universe/celestia/celestia.component.html
+++ b/src/app/pages/universe/celestia/celestia.component.html
@@ -3,70 +3,73 @@
 	section01="{{ 'UNIVERSE.CELESTIA.SECTION01' | translate }}"
 	section02="{{ 'UNIVERSE.CELESTIA.SECTION02' | translate }}"
 	section03="{{ 'UNIVERSE.CELESTIA.SECTION03' | translate }}"
-	imgLeft="assets/images/crystals/crystals_left.png"
-	imgRight="assets/images/crystals/crystals_right.png">
+	imgLeft="https://via.placeholder.com/200x400.png"
+	imgRight="https://via.placeholder.com/200x400.png">
 </head-celestia>
 <div class="celestia-map-container">
 	<div class="celestia-imgs">
-		<img src="assets/images/crystals/crystal.png" alt="">
+		<img src="https://via.placeholder.com/650x450.png" alt="">
 	</div>
 	<div class="celestia-text">
 		<h2>{{ 'UNIVERSE.CELESTIA.POPULATION.TITLE' | translate | uppercase }}</h2>
 		<p innerHtml="{{ 'UNIVERSE.CELESTIA.POPULATION.TEXT01' | translate }}<br><br>{{ 'UNIVERSE.CELESTIA.POPULATION.TEXT02' | translate }}"></p>
 	</div>
 </div>
-<div class="celestia-history-container">
-	<div class="celestia-history">
-		<h2>{{ 'UNIVERSE.CELESTIA.CALENDAR.TITLE' | translate | uppercase }}</h2>
-		<div class="celestia-history-title"><h4>{{ 'UNIVERSE.CELESTIA.CALENDAR.SUBTITLE01' | translate | uppercase }}</h4></div>
-		<p innerHtml="{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT01' | translate }}<br>{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT02' | translate }}"></p>
-		<div class="celestia-history-title"><h4>{{ 'UNIVERSE.CELESTIA.CALENDAR.SUBTITLE02' | translate | uppercase }}</h4></div>
-		<p innerHtml="{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT03' | translate }}<br>{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT04' | translate }}"></p>
-		<div class="celestia-history-title"><h4>{{ 'UNIVERSE.CELESTIA.CALENDAR.SUBTITLE03' | translate | uppercase }}</h4></div>
-		<p innerHtml="{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT05' | translate }}<br>{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT06' | translate }}"></p>
+<div class="celestia-story-container">
+	<h2>{{ 'UNIVERSE.CELESTIA.CALENDAR.TITLE' | translate | uppercase }}</h2>
+	<div class="celestia-history-container">
+		<div class="celestia-history">
+			<div class="celestia-history-title"><h4>{{ 'UNIVERSE.CELESTIA.CALENDAR.SUBTITLE01' | translate | uppercase }}</h4></div>
+			<p innerHtml="{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT01' | translate }}<br>{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT02' | translate }}"></p>
+			<div class="celestia-history-title"><h4>{{ 'UNIVERSE.CELESTIA.CALENDAR.SUBTITLE02' | translate | uppercase }}</h4></div>
+			<p innerHtml="{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT03' | translate }}<br>{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT04' | translate }}"></p>
+			<div class="celestia-history-title"><h4>{{ 'UNIVERSE.CELESTIA.CALENDAR.SUBTITLE03' | translate | uppercase }}</h4></div>
+			<p innerHtml="{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT05' | translate }}<br>{{ 'UNIVERSE.CELESTIA.CALENDAR.TEXT06' | translate }}"></p>
+		</div>
+		<table class="celestia-history-table">
+			<thead>
+				<tr>
+					<td>{{ "Ligne du temps Célestien" | uppercase }}</td>
+					<td></td>
+					<td></td>
+					<td>{{ "Ligne du temps Arlénien" | uppercase }}</td>
+				</tr>
+			</thead>
+			<tbody>
+				<tr class="dotted"><td></td><td></td><td></td><td></td></tr>
+				<tr>
+					<td>Création du monde</td>
+					<td>-???</td>
+					<td>-???</td>
+					<td>Création du monde</td>
+				</tr>
+				<tr class="dotted"><td></td><td></td><td></td><td></td></tr>
+				<tr>
+					<td></td>
+					<td></td>
+					<td>0</td>
+					<td>Découverte du cristal</td>
+				</tr>
+				<tr>
+					<td>Le Grand Massacre</td>
+					<td>-4</td>
+					<td>666</td>
+					<td>La Grande Révolte</td>
+				</tr>
+				<tr>
+					<td>La Bataille de l'Espérance</td>
+					<td>0</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Début du récit...</td>
+					<td>30</td>
+					<td>700</td>
+					<td>Début de l'aventure...</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
-	<table class="celestia-history-table">
-		<thead>
-			<tr>
-				<td>Ligne du temps Célestien</td>
-				<td></td>
-				<td></td>
-				<td>Ligne du temps Arlénien</td>
-			</tr>
-		</thead>
-		<tbody>
-			<tr class="dotted"><td></td><td></td><td></td><td></td></tr>
-			<tr>
-				<td>Création du monde</td>
-				<td>-???</td>
-				<td>-???</td>
-				<td>Création du monde</td>
-			</tr>
-			<tr class="dotted"><td></td><td></td><td></td><td></td></tr>
-			<tr>
-				<td></td>
-				<td></td>
-				<td>0</td>
-				<td>Découverte du cristal</td>
-			</tr>
-			<tr>
-				<td>Le Grand Massacre</td>
-				<td>-4</td>
-				<td>666</td>
-				<td>La Grande Révolte</td>
-			</tr>
-			<tr>
-				<td>La Bataille de l'Espérance</td>
-				<td>0</td>
-				<td></td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>Début du récit...</td>
-				<td>30</td>
-				<td>700</td>
-				<td>Début de l'aventure...</td>
-			</tr>
-		</tbody>
-	</table>
+	<img class="celestia-story-img" src="https://via.placeholder.com/1200x400.png" alt="">
 </div>
