--- a/src/app/pages/universe/celestia/celestia.component.scss
+++ b/src/app/pages/universe/celestia/celestia.component.scss
@@ -38,36 +38,32 @@
 		}
 
 		.celestia-imgs {
-			position: relative;
+			width: 50%;
 			margin: 0 auto;
-			height: 450px;
-			width: 450px;
+			padding-left: 10%;
 
 			@media screen and (max-width: 1000px) {
-				margin-top: 20px;
-				height: 350px;
-				width: 350px;
+				width: 80%;
+				padding: 0;
+				margin-bottom: 20px;
 			}
 
 			img {
-				position: absolute;
-				height: 450px;
-
-				@media screen and (max-width: 1000px) {
-					height: 350px;
-				}
+				max-height: 450px;
+				width: 100%;
 			}
 		}
 
 		.celestia-text {
-			text-align: left;
 			width: 50%;
+			padding-left: 20px;
 			padding-right: 10%;
+			text-align: left;
 
 			@media screen and (max-width: 1000px) {
+				width: 80%;
 				padding: 0;
 				margin-bottom: 20px;
-				width: 80%;
 			}
 
 			p {
@@ -83,18 +79,15 @@
 
 	////////////////////////////////////////////////////////////////////////////////////////////
 
-	.celestia-history-container {
+	.celestia-story-container {
 		position: relative;
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 		justify-content: center;
-		align-items: center;
-		height: 950px;
+		height: 1400px;
 		padding: 0 10%;
 
 		@media screen and (max-width: 1000px) {
-			flex-direction: column;
-			justify-content: normal;
 			height: auto;
 		}
 
@@ -118,61 +111,88 @@
 				url("/assets/images/home_04.png");
 		}
 
-		.celestia-history {
+		.celestia-history-container {
 			display: flex;
-			flex-direction: column;
-			margin-right: 30px;
+			flex-direction: row;
 
 			@media screen and (max-width: 1000px) {
-				margin: 0;
+				flex-direction: column;
 			}
 
-			.celestia-history-title {
+			.celestia-history {
 				display: flex;
-				flex-direction: row;
-				justify-content: space-between;
-				padding-top: 30px;
-				padding-bottom: 4px;
+				flex-direction: column;
+				margin-right: 30px;
+
+				@media screen and (max-width: 1000px) {
+					margin: 0;
+				}
+
+				.celestia-history-title {
+					display: flex;
+					flex-direction: row;
+					justify-content: space-between;
+					padding-top: 30px;
+					padding-bottom: 4px;
+				}
+
+				@media screen and (max-width: 1000px) {
+					margin-bottom: 20px;
+				}
+
+				p {
+					margin: 0;
+				}
 			}
 
-			@media screen and (max-width: 1000px) {
-				margin-bottom: 20px;
-				width: 80%;
-			}
+			.celestia-history-table {
+				height: 100%;
+				border-collapse: collapse;
 
-			p {
-				margin: 0;
+				@media screen and (max-width: 1000px) {
+					height: 500px;
+					width: 100%;
+				}
+
+				thead {
+					border-bottom: 4px solid $light-color;
+
+					td {
+						text-align: center;
+						//text-decoration: underline;
+					}
+				}
+
+				tbody {
+
+					td {
+						padding: 0;
+						text-align: center;
+						border-radius: 0;
+					}
+
+					td:nth-child(2), td:nth-child(3) {
+						padding: 10px;
+					}
+
+					.dotted td:nth-child(2)  {
+						height: 40px;
+						border-right: 4px dotted $light-color;
+					}
+
+					td:nth-child(2)  {
+						border-right: 4px solid $light-color;
+					}
+				}
 			}
 		}
 
-		.celestia-history-table {
-			height: 80%;
-			border-collapse: collapse;
+		.celestia-story-img {
+			margin-top: 30px;
+			width: 100%;
 
 			@media screen and (max-width: 1000px) {
-				height: 500px;
-			}
-
-			tbody {
-
-				td {
-					padding: 0;
-					text-align: center;
-					border-radius: 0;
-				}
-
-				td:nth-child(2), td:nth-child(3) {
-					padding: 10px;
-				}
-
-				.dotted td:nth-child(2)  {
-					height: 40px;
-					border-right: 4px dotted $light-color;
-				}
-
-				td:nth-child(2)  {
-					border-right: 4px solid $light-color;
-				}
+				margin-bottom: 30px;
 			}
 		}
 	}
