Refactor(arenart): Fix all the page for all screens

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,6 +3,10 @@
 :host {
 	background-color: $dark-color;
 
+	a {
+		font-family: "Montserrat", sans-serif;
+	}
+
 	.bigfooter-infos {
 		display: flex;
 		height: 250px;
